# semeai-gate-basic

./: .env.api.example  .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.api.yml  fly.toml  index.html  pyproject.toml
benchmarks/: gate_cases_v0_1.jsonl  gate_cases_v0_2.jsonl  gate_cases_v0_3.jsonl
demo/: index.html  saas_visible.html
docs/: api_semeai_tech_deploy.md  architecture_adr_v0_1.md  basic_audit_v0_1.md  benchmark_v0_2.md  benchmark_v0_3.md  contract.md  crypto_billing_v0_1.md  demo_script_5_min.md  deployment_modes.md  easypanel_api_deploy.md  ecosystem_contract.md  email_domain_namecheap.md  email_provider_v0_1.md  fly_api_deploy.md  github_pages_deploy.md  github_publish_checklist.md  github_release_checklist.md  integration_checklist.md  integration_patterns.md  license_options.md  operator_txid_activation_runbook.md  outreach_emails.md  partner_outreach_templates.md  pilot_packet.md  pilot_playbook.md  release_checklist_v0_1.md  saas_account_shell_v0_1.md  saas_api_contract_v0_1.md  saas_api_runtime_v0_1.md  saas_later.md  saas_mvp_plan.md  sdk_quickstart.md  ui_demo_recommendation.md  what_is_not_included.md
examples/: api_curl_check.ps1  api_fake_promo_request.json  context_drift.py  existing_chatbot_integration.js  existing_chatbot_integration.py  fake_promo_code.js  fake_promo_code.json  fake_promo_code.py  middleware_boundary.js  middleware_boundary.py  safe_supported_answer.py  unsafe_action.py  unsupported_financial_claim.py
schemas/: semeai_gate_v0_1.json
semeai_gate_basic/: __init__.py  __main__.py  accounts.py  admin.py  api.py  billing.py  crypto_verify.py  email_provider.py  gate.py  keys.py  oauth_google.py  plans.py  server.py  (+4 more)
(+24 files in other folders)
