[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "semeai-gate-basic"
version = "0.1.0"
description = "Basic local release-control gate for LLM answers: SHOW / REVIEW / BLOCK."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "SemeAI" }]
license = { file = "LICENSE" }
keywords = ["llm", "guardrails", "release-control", "ai-safety", "audit"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.setuptools.packages.find]
where = ["src"]
