[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "semeai-gate-basic"
version = "0.2.0"
description = "Local release-control gate for AI answers"
requires-python = ">=3.10"
authors = [{ name = "Anton Semenenko" }, { name = "SemeAI" }]
readme = "README.md"
license = { text = "Apache-2.0" }

[tool.setuptools.packages.find]
include = ["semeai_gate_basic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--basetemp=.pytest_tmp"
